:bug: Fix toc spacing.

--- a/frontend/scss/components/organisms/toc.scss
+++ b/frontend/scss/components/organisms/toc.scss
@@ -42,7 +42,7 @@
     z-index: 1;
     padding: 0;
     height: auto;
-    top: 80px;
+    top: 120px;
     right: auto;
     background: none;
     box-shadow: none;
